# hush-whisper

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
docs/: audio-pipeline.md  done.md  model-management.md  plan.md  tech-stack.md
refs/: mod.rs
scripts/: bump-version.js  generate-licenses.js
src-tauri/: .gitignore  Cargo.toml  about.hbs  about.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  config.toml.example
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs  vad.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/log/: mod.rs
src-tauri/src/shortcuts/: handler.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/whisper/: mod.rs  transcribe.rs
src/lib/components/: ResultDisplay.svelte  Sidebar.svelte  StatusAndResult.svelte  StatusBar.svelte
src/lib/components/categories/: About.svelte  GeneralSettings.svelte  HistorySettings.svelte  LlmSettings.svelte  ModelSettings.svelte  OutputSettings.svelte  RecordingAndResult.svelte  RecordingSettings.svelte  ResultAndHistory.svelte  ResultViewer.svelte  ShortcutAndOutput.svelte  ShortcutSettings.svelte  SpeechRecognitionSettings.svelte
src/lib/stores/: settings.svelte.ts
src/lib/styles/: settings-common.css
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
