[package]
name = "hush-whisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_whisper_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"
rubato = "0.16"
voice_activity_detector = "0.2"

# Whisper (Phase 1) - CUDA enabled for GPU acceleration
whisper-rs = { version = "0.15", features = ["cuda"] }

# Model download & HTTP client
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# Clipboard
arboard = "3"
enigo = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }

# Autostart
tauri-plugin-autostart = "2"

